# BrainFogCLI

./: .gitignore  README.md  pyproject.toml  test-run.txt
src/: main.py  populate.py  recall_trial.py
src/agents/: Agent.py  MemoryAssistantAgent.py  MemoryRefineAgent.py  RecallQueryAgent.py  RequestCategorizationAgent.py  __init__.py  specialized_agents.py
src/config/: config.py
src/database/: __init__.py  database.py
src/models/: RefinedMemory.py  __init__.py
src/models/db/: Keyword.py  Memory.py  __init__.py  associations.py
src/models/embeddings/: __init__.py  granite_embedding.py
src/models/schemas/: RecallQuery.py  RequestCategorization.py
src/prompts/: MemAssistantPrompt.py  MemoryRefinePrompt.py  RecallQueryPrompt.py  RequestCategorizerPrompt.py  __init__.py
src/repositories/: keyword_repository.py  memory_repo.py
src/services/: memory_service.py
