[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fog"
version = "0.1.0"
description = "Agentic memory refinement system"
dependencies = [
    "pydantic",
    "langchain",
    "langchain-openai",
    "pydantic-settings",
    "SQLAlchemy",
    "faiss-cpu",
    "numpy",
    "llama-cpp-python",
    "langchain-community"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
fog-run = "main:main"
fog-populate = "populate:populate"